--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@splidejs/splide": "^4.0.7",
+    "@splidejs/splide-extension-auto-scroll": "^0.4.2",
+    "@splidejs/vue-splide": "^0.6.7",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "swiper": "^6.8.4",
     "vue": "^2.6.11",
     "vue-clickaway": "^2.2.2",
     "vue-router": "^3.2.0",
