--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,6 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@splidejs/splide": "^4.0.7",
     "@splidejs/splide-extension-auto-scroll": "^0.4.2",
     "@splidejs/vue-splide": "^0.6.7",
