--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,6 +17,7 @@
     "@splidejs/vue-splide": "^0.6.7",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "jquery": "^3.6.0",
     "swiper": "^6.8.4",
     "vue": "^2.6.11",
     "vue-clickaway": "^2.2.2",
