--- a/front-end/package.json
+++ b/front-end/package.json
@@ -22,6 +22,7 @@
     "vue": "^2.6.11",
     "vue-clickaway": "^2.2.2",
     "vue-router": "^3.2.0",
+    "vue-slick": "^1.1.20",
     "vue3-click-away": "^1.2.1"
   },
   "devDependencies": {
