--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,7 @@
     "@splidejs/splide": "^4.0.7",
     "@splidejs/splide-extension-auto-scroll": "^0.4.2",
     "@splidejs/vue-splide": "^0.6.7",
+    "aos": "^2.3.4",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
